The python script for Cycles baking crashes #47608

Closed
opened 2016-02-27 22:55:09 +01:00 by Danyl Bekhoucha · 6 comments

System Information
Windows 10 32 bits - HD 5770

Blender Version
Broken: 2.77 RC1
Worked: 2.76b

Short description of error
If i bake a tangent normal map with selected to active in the UI everything work. But if i use this python code Blender close immediately:
bpy.ops.object.bake(type="NORMAL", normal_space ='TANGENT', use_selected_to_active = True, use_cage = True, cage_extrusion = 0, margin = 32)

The script is correct because it works on Blender 2.76b

Exact steps for others to reproduce the error
Select two planes, unfold the uv of the active selection and run the script.

**System Information** Windows 10 32 bits - HD 5770 **Blender Version** Broken: 2.77 RC1 Worked: 2.76b **Short description of error** If i bake a tangent normal map with selected to active in the UI everything work. But if i use this python code Blender close immediately: bpy.ops.object.bake(type="NORMAL", normal_space ='TANGENT', use_selected_to_active = True, use_cage = True, cage_extrusion = 0, margin = 32) The script is correct because it works on Blender 2.76b **Exact steps for others to reproduce the error** Select two planes, unfold the uv of the active selection and run the script.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DanylBekhoucha

Added subscriber: @DanylBekhoucha

This issue was referenced by 0feab1baef

This issue was referenced by 0feab1baef730a63a242f7b9914e1e42813b8e54

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht
Brecht Van Lommel self-assigned this 2016-02-27 23:58:27 +01:00

Fixed, thanks for the report.

Fixed, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47608
No description provided.