Fix T47608: Cycles cage baking crash after recent uv derivative fixes.